tests/baselines/reference/collisionThisExpressionAndAliasInGlobal.errors.txt
collisionThisExpressionAndAliasInGlobal.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== collisionThisExpressionAndAliasInGlobal.ts (1 errors) ====
    module a {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var b = 10;
    }
    var f = () => this;
    import _this = a; // Error